# G4_standalone_simple_lxplus_setup

./: .gitignore  CMakeLists.txt  README.md  action.cc  action.hh  box1.cc  construction.cc  construction.hh  detector.cc  detector.hh  event.cc  event.hh  generator.cc  generator.hh  isophotons.mac  physics.cc  physics.hh  run.cc  run.mac  run_build.sh  setup.sh  vis.mac
